--- a/inv.html
+++ b/inv.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inventory Management App</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
@@ -13,36 +13,39 @@
   <div class="container py-5">
     <h1>Inventory Management</h1>
 
+    <!-- Authentication Section -->
     <div id="auth-section">
       <h3>Login / Sign Up</h3>
-      <input type="email" id="username" class="form-control my-2" placeholder="Username (Email)">
-      <input type="password" id="password" class="form-control my-2" placeholder="Password">
-      <div id="signup-fields" style="display:none;">
+      <input type="email" id="username" class="form-control my-2" placeholder="Username (Email)" />
+      <input type="password" id="password" class="form-control my-2" placeholder="Password" />
+      <div id="signup-fields" style="display: none;">
         <select id="role" class="form-select my-2">
           <option value="receive">Receive</option>
           <option value="dispatch">Dispatch</option>
           <option value="manager">Manager</option>
+          <option value="admin">Admin</option>
         </select>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="authMode" id="signIn" value="Sign In" checked>
+        <input class="form-check-input" type="radio" name="authMode" id="signIn" value="Sign In" checked />
         <label class="form-check-label" for="signIn">Sign In</label>
-        <input class="form-check-input ms-3" type="radio" name="authMode" id="signUp" value="Sign Up">
+        <input class="form-check-input ms-3" type="radio" name="authMode" id="signUp" value="Sign Up" />
         <label class="form-check-label" for="signUp">Sign Up</label>
       </div>
       <button id="auth-btn" class="btn btn-primary mt-3">Submit</button>
       <div id="auth-status" class="text-danger mt-2"></div>
     </div>
 
-    <div id="main-section" style="display:none;">
+    <!-- Main Section -->
+    <div id="main-section" style="display: none;">
       <button id="logout-btn" class="btn btn-danger mb-3">Logout</button>
 
       <!-- Receive Section -->
-      <div id="receive-section" style="display:none;">
+      <div id="receive-section" style="display: none;">
         <h3>Receive Items</h3>
-        <input type="text" id="recv-id" class="form-control my-2" placeholder="Item ID">
-        <input type="text" id="recv-name" class="form-control my-2" placeholder="Item Description">
-        <input type="number" id="recv-qty" class="form-control my-2" placeholder="Quantity" min="1" value="1">
+        <input type="text" id="recv-id" class="form-control my-2" placeholder="Item ID" />
+        <input type="text" id="recv-name" class="form-control my-2" placeholder="Item Description" />
+        <input type="number" id="recv-qty" class="form-control my-2" placeholder="Quantity" min="1" value="1" />
         <button id="recv-btn" class="btn btn-success">Receive Item</button>
 
         <h4 class="mt-4">Inventory Balance</h4>
@@ -50,12 +53,13 @@
       </div>
 
       <!-- Dispatch Section -->
-      <div id="dispatch-section" style="display:none;">
+      <div id="dispatch-section" style="display: none;">
         <h3>Request Dispatch</h3>
         <select id="dispatch-item" class="form-select my-2"></select>
-        <input type="number" id="dispatch-qty" class="form-control my-2" placeholder="Quantity to Dispatch" min="1" value="1">
-        <input type="text" id="dispatch-branch" class="form-control my-2" placeholder="Branch">
-        <input type="text" id="dispatch-person" class="form-control my-2" placeholder="Person Requesting Dispatch">
+        <input type="number" id="dispatch-qty" class="form-control my-2" placeholder="Quantity to Dispatch" min="1"
+          value="1" />
+        <input type="text" id="dispatch-branch" class="form-control my-2" placeholder="Branch" />
+        <input type="text" id="dispatch-person" class="form-control my-2" placeholder="Person Requesting Dispatch" />
         <button id="request-dispatch" class="btn btn-warning">Request Dispatch</button>
 
         <h4 class="mt-4">Inventory Balance</h4>
@@ -72,7 +76,7 @@
       </div>
 
       <!-- Manager Section -->
-      <div id="manager-section" style="display:none;">
+      <div id="manager-section" style="display: none;">
         <h3>Manager Approval</h3>
         <table class="table table-bordered" id="approve-table"></table>
         <button id="approve-btn" class="btn btn-success me-2">Approve Selected</button>
@@ -87,9 +91,27 @@
         <h4 class="mt-4">Rejected Dispatches</h4>
         <table class="table table-bordered" id="rejected-dispatch-mgr"></table>
       </div>
+
+      <!-- Admin Section -->
+      <div id="admin-section" style="display: none;">
+        <h3>Admin User Management</h3>
+        <table class="table table-bordered" id="admin-user-table">
+          <thead>
+            <tr>
+              <th>Email</th>
+              <th>Password</th>
+              <th>Role</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+        <button id="save-users-btn" class="btn btn-primary">Save Changes</button>
+      </div>
     </div>
   </div>
 
+  <!-- SCRIPT SECTION -->
   <script>
     $(document).ready(function () {
       let users = [];
@@ -98,10 +120,10 @@
 
       function refreshInventoryTables() {
         const invHTML = inventory.map(i =>
-          `<tr><td>${i.id}</td><td>${i.name}</td><td>${i.qty}</td><td>${i.lastUpdated || ''}</td></tr>`).join("");
+          `<tr><td>${i.id}</td><td>${i.name}</td><td>${i.qty}</td><td>${i.lastUpdated || ''}</td></tr>`
+        ).join("");
         const tableHeader = `<thead><tr><th>ID</th><th>Name</th><th>Quantity</th><th>Last Updated</th></tr></thead>`;
         $('#inventory-table, #dispatcher-inventory, #manager-inventory').html(`${tableHeader}<tbody>${invHTML}</tbody>`);
-
         const dropdownHTML = inventory.map(i =>
           `<option value="${i.id}">${i.name} (${i.qty})</option>`).join("");
         $('#dispatch-item').html(dropdownHTML);
@@ -109,11 +131,14 @@
 
       function refreshDispatchTables() {
         const pendingHTML = dispatchRequests.filter(d => d.status === 'Pending').map(d =>
-          `<tr><td><input type="checkbox" class="approve-select" value="${d.id}"></td><td>${d.item}</td><td>${d.qty}</td><td>${d.branch}</td><td>${d.person}</td><td>${d.date}</td></tr>`).join("");
+          `<tr><td><input type="checkbox" class="approve-select" value="${d.id}"></td><td>${d.item}</td><td>${d.qty}</td><td>${d.branch}</td><td>${d.person}</td><td>${d.date}</td></tr>`
+        ).join("");
         const approvedHTML = dispatchRequests.filter(d => d.status === 'Approved').map(d =>
-          `<tr><td>${d.item}</td><td>${d.qty}</td><td>${d.branch}</td><td>${d.person}</td><td>${d.date}</td></tr>`).join("");
+          `<tr><td>${d.item}</td><td>${d.qty}</td><td>${d.branch}</td><td>${d.person}</td><td>${d.date}</td></tr>`
+        ).join("");
         const rejectedHTML = dispatchRequests.filter(d => d.status === 'Rejected').map(d =>
-          `<tr><td>${d.item}</td><td>${d.qty}</td><td>${d.branch}</td><td>${d.person}</td><td>${d.date}</td></tr>`).join("");
+          `<tr><td>${d.item}</td><td>${d.qty}</td><td>${d.branch}</td><td>${d.person}</td><td>${d.date}</td></tr>`
+        ).join("");
 
         const pendingHeader = `<thead><tr><th>Select</th><th>Item</th><th>Quantity</th><th>Branch</th><th>Person</th><th>Date</th></tr></thead>`;
         const otherHeader = `<thead><tr><th>Item</th><th>Quantity</th><th>Branch</th><th>Person</th><th>Date</th></tr></thead>`;
@@ -123,7 +148,50 @@
         $('#rejected-dispatch, #rejected-dispatch-mgr').html(`${otherHeader}<tbody>${rejectedHTML}</tbody>`);
       }
 
-      $("input[name='authMode']").change(() => $('#signup-fields').toggle($('#signUp').is(':checked')));
+      function refreshAdminUserTable() {
+        const tbody = $('#admin-user-table tbody');
+        tbody.empty();
+        users.forEach((user, index) => {
+          const row = $(`
+            <tr>
+              <td><input type="email" class="form-control user-email" data-index="${index}" value="${user.username}"></td>
+              <td><input type="text" class="form-control user-password" data-index="${index}" value="${user.password}"></td>
+              <td>
+                <select class="form-select user-role" data-index="${index}">
+                  <option value="receive">Receive</option>
+                  <option value="dispatch">Dispatch</option>
+                  <option value="manager">Manager</option>
+                  <option value="admin">Admin</option>
+                </select>
+              </td>
+              <td><button class="btn btn-danger btn-sm delete-user" data-index="${index}">Delete</button></td>
+            </tr>
+          `);
+          row.find('.user-role').val(user.role);
+          tbody.append(row);
+        });
+      }
+
+      function loginUser(role) {
+        $('#auth-section').hide();
+        $('#main-section').show();
+        $('#receive-section, #dispatch-section, #manager-section, #admin-section').hide();
+
+        if (role === 'receive') $('#receive-section').show();
+        if (role === 'dispatch') $('#dispatch-section').show();
+        if (role === 'manager') $('#manager-section').show();
+        if (role === 'admin') {
+          $('#admin-section').show();
+          refreshAdminUserTable();
+        }
+
+        refreshInventoryTables();
+        refreshDispatchTables();
+      }
+
+      $("input[name='authMode']").change(() =>
+        $('#signup-fields').toggle($('#signUp').is(':checked'))
+      );
 
       $('#auth-btn').click(function () {
         const mode = $('input[name="authMode"]:checked').val();
@@ -136,6 +204,9 @@
           const role = $('#role').val();
           if (!role) return $('#auth-status').text('Select a role');
           if (users.find(u => u.username === username)) return $('#auth-status').text('Username exists');
+          if (role === 'admin' && users.some(u => u.role === 'admin')) {
+            return $('#auth-status').text('Only one admin account is allowed');
+          }
           users.push({ username, password, role });
           loginUser(role);
         } else {
@@ -149,17 +220,6 @@
         $('#main-section').hide();
         $('#auth-section').show();
       });
-
-      function loginUser(role) {
-        $('#auth-section').hide();
-        $('#main-section').show();
-        $('#receive-section, #dispatch-section, #manager-section').hide();
-        if (role === 'receive') $('#receive-section').show();
-        if (role === 'dispatch') $('#dispatch-section').show();
-        if (role === 'manager') $('#manager-section').show();
-        refreshInventoryTables();
-        refreshDispatchTables();
-      }
 
       $('#recv-btn').click(() => {
         const id = $('#recv-id').val(), name = $('#recv-name').val(), qty = parseInt($('#recv-qty').val());
@@ -217,6 +277,43 @@
           req.status = 'Rejected';
         });
         refreshDispatchTables();
+      });
+
+      $('#save-users-btn').click(() => {
+        let valid = true;
+        const updatedUsers = [];
+        $('#admin-user-table tbody tr').each(function () {
+          const index = $(this).find('.user-email').data('index');
+          const email = $(this).find('.user-email').val().trim();
+          const password = $(this).find('.user-password').val();
+          const role = $(this).find('.user-role').val();
+
+          if (!email || !password || !role) {
+            valid = false;
+            return false;
+          }
+          updatedUsers.push({ username: email, password, role });
+        });
+
+        if (!valid) {
+          alert('All fields are required for all users.');
+          return;
+        }
+
+        const adminCount = updatedUsers.filter(u => u.role === 'admin').length;
+        if (adminCount > 1) {
+          alert('Only one admin account is allowed.');
+          return;
+        }
+
+        users = updatedUsers;
+        alert('User data saved successfully.');
+      });
+
+      $('#admin-user-table').on('click', '.delete-user', function () {
+        const index = $(this).data('index');
+        users.splice(index, 1);
+        refreshAdminUserTable();
       });
     });
   </script>
